cgroup: there's no point in labelling cgroupfs dirs, so let's not do that

This allows us to get rid of the dep on libsystemd-label for cgroup
management.

https://bugs.freedesktop.org/show_bug.cgi?id=69966